<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.michaelrnovak.util.logger.LoggerActivity">

    <item android:id="@+id/action_search"
        android:title="@string/menu_search_label"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_filter_loglevel"
        android:title="@string/menu_filter_loglevel"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_filter_tag"
        android:title="@string/menu_filter_tag"
        android:icon="@drawable/ic_menu_tag"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|collapseActionView" />
    <!--item android:id="@+id/action_filter_app"
        android:title="@string/menu_filter_app"
        android:orderInCategory="300"
        app:showAsAction="never" /-->
    <!--android:icon="@drawable/ic_menu_filter_app"-->
    <!--item android:id="@+id/action_log_format"
        android:title="@string/menu_log_format"
        android:orderInCategory="500"
        app:showAsAction="never" /-->
    <!--android:icon="@drawable/ic_menu_filter_app"-->
    <item android:id="@+id/action_buffer"
        android:title="@string/menu_buffer"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_menu_manage"-->
    <item android:id="@+id/action_email"
        android:title="@string/menu_email"
        android:orderInCategory="500"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_menu_send"-->
    <item android:id="@+id/action_save"
        android:title="@string/menu_save"
        android:orderInCategory="600"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_menu_save"-->
    <item android:id="@+id/action_select"
        android:title="@string/menu_select"
        android:icon="@drawable/ic_menu_monitor"
        android:orderInCategory="700"
        app:showAsAction="never" />
</menu>
